A guide to making money from artificial intelligence without exaggeration
It gives you the necessary information to profit from artificial intelligence and the things needed to start implementing it. It is recommended for beginners and intermediates in this field. I would like to tell you that hard work is the secret to success.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>موقعي الأول</title>
-</head>
-<body>
-  <h1>مرحبا بك في موقعي!</h1>
-  <p>هذا الموقع يعمل بنجاح عبر Netlify.</p>
-</body>
-</html>
+<div style="border:1px solid #ccc;padding:15px;margin:10px;border-radius:10px">
+  <h2>💡 دليل الربح من الذكاء الاصطناعي 2025</h2>
+  <p>تعلم كيف تربح من أدوات الذكاء الاصطناعي بسهولة حتى لو كنت مبتدئ – ملف PDF سهل وسريع الفهم.</p>
+  <a href="https://ebooksprofessional.gumroad.com/l/AISIDEHUSTLE?affiliate_id=283765907" target="_blank" style="display:inline-block;padding:10px 15px;background:#28a745;color:#fff;text-decoration:none;border-radius:5px">🔗 اشترِ الآن من هنا</a>
+</div>
